--- a/style.css
+++ b/style.css
@@ -88,6 +88,13 @@ h1 {
   margin-top: -10px;
 }
 
+.infobox {
+  color: #96979c;
+  font-family: 'Manrope', sans-serif;
+  font-size: 18px;
+  font-style: italic;
+}
+
 h1 span {
   position: relative;
   z-index: 1;
@@ -144,7 +151,7 @@ a:hover {
   transition: 0.5s;
 }
 
-img {
+.photo {
   display: flex;
   border: none;
   border-radius: 50%;
@@ -152,7 +159,7 @@ img {
   margin-bottom: 14px;
 }
 
-img:hover {
+.photo:hover {
   transform: rotate(20deg);
   transition: 0.5s;
 }
