--- a/style.css
+++ b/style.css
@@ -88,31 +88,15 @@ h1 {
   margin-top: -10px;
 }
 
-.infobox {
-  color: #96979c;
-  font-family: 'Manrope', sans-serif;
-  font-size: 18px;
-  font-style: italic;
-}
-
 h1 span {
-  position: relative;
-  z-index: 1;
+  color: white;
+  text-decoration: underline #d5003d;
 }
 
-h1 span::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: -5px;
-  right: -5px;
-  background-color: #d5003d;
-  opacity: 0.9;
-  transform: skew(-10deg, -2deg);
-  z-index: -1;
-  width: 100%;
-  height: 100%;
+h1 span:hover {
+  color: #d5003d;
+  text-decoration: underline white;
+  transition: 0.5s;
 }
 
 p {
@@ -162,8 +146,13 @@ a:hover {
 }
 
 .icons {
-  font-size: 36px;
-  padding: 4px;
+  font-size: 30px;
+  padding-top: 10px;
+}
+
+#fa {
+  font-size: 26px;
+  padding: 2px;
 }
 
 .socialbtn {
@@ -172,6 +161,11 @@ a:hover {
 
 .socialbtn:hover {
   transform: scale(1.05);
+}
+
+.note {
+  background-color: #0d052a;
+  font-size: 11px;
 }
 
 .footer-text {
