--- a/style.css
+++ b/style.css
@@ -9,11 +9,10 @@ body {
   text-align: center;
   max-width: 100%;
   margin: 0 auto;
-  float: center;
   width: 40%;
 }
 
-#content-container {
+.content-container {
   padding: 8px;
   border: 1px dashed white;
   border-top: none;
@@ -24,7 +23,7 @@ section {
   page-break-after: auto;
 }
 
-#home {
+.home-page {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -32,7 +31,7 @@ section {
   min-height: 100vh;
 }
 
-#about {
+.about-page {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -40,7 +39,7 @@ section {
   min-height: 100vh;
 }
 
-#content {
+.content-page {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -48,7 +47,7 @@ section {
   min-height: 100vh;
 }
 
-#connect {
+.connect-page {
   display: flex;
   justify-content: center;
   align-items: center;
