--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ html {
   box-sizing: border-box;
   margin: 0 auto;
   background-color: #0d052a;
+  background-image: url(images/grainy-squiggles-LIGHT.png);
 }
 
 body {
@@ -10,6 +11,7 @@ body {
   max-width: 100%;
   margin: 0 auto;
   width: 40%;
+  background-color: #0d052a;
 }
 
 .content-container {
